# simd

./: .gitignore  LICENSE  README.md  simd.h  simd_2d_collision.c  simd_2d_collision.h  simd_approx_math.h  simd_collision.c  simd_collision.h  simd_collision.md  simd_math.c  simd_math.h  simd_vec2.h  vec2.h
.github/workflows/: build.yml
benchmark/: CMakeLists.txt  benchmark  benchmark.c
doc/: simd_2d_collision.md  simd_collision.md  simd_math.md
extra/: simd_2d_collision.c  simd_approx_math.h  simd_color.h  simd_math.c  simd_math.h  vec2.h
littledot/: fpng.cpp  main.c  rasterizer.c  rasterizer.h
littledot/littledot/: main.c
littledot/littledot.xcodeproj/: project.pbxproj
profiling/: CMakeLists.txt  profiler.c
simd_collision/: README.md
tests/: CMakeLists.txt  aabb.c  test  test.c  test_aabb.c  test_aabb.h  test_collision_2d.h  test_simd.c  test_simd_math.h
tests/test_simd.xcodeproj/: project.pbxproj
